--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <img src="redpeg.png" id="redpeg" style="display: none;" />
   <img src="hole.png" id="hole" style="display: none;" />
   <center>
+    <h1>One Person Chess Solver</h1>
     <canvas id="boardCanvas" width="400" height="400" style="border:1px solid #cbbfaa;">
       Your browser does not support the HTML5 canvas tag.
     </canvas>
